demo-ingress/deploy/deployment.yaml
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3ninja
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: s3ninja
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3ninja
    spec:
      containers:
      - name: s3ninja 
        image:  scireum/s3-ninja
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: http
        resources:
          requests:
            memory: 128Mi
            cpu: 50m
          limits:
            memory: 256Mi
            cpu: 250m
        readinessProbe:
          httpGet:
            path: /ui
            port: http
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 5
