demo-ingress/deploy/svc.yaml
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
 # regarding copyright ownership.  The ASF licenses this file
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 #
 #   http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
apiVersion: v1
kind: Service
metadata:
  name: s3-svc
spec:
  type: NodePort
  ports:
    - port: 9444
      targetPort: 9000
      protocol: TCP
      nodePort: 30444 # TODO: remove me
      name: http
  selector:
    app.kubernetes.io/name: s3ninja
